--- a/Code/src/App.scss
+++ b/Code/src/App.scss
@@ -4,3 +4,14 @@
   margin: auto;
   padding: 2rem;
 }
+
+.result-container {
+  height: 80vh;
+  margin: 1rem 0;
+  border: 1px solid black;
+}
+
+.graph-container {
+  width: 100%;
+  height: 50%;
+}
