--- a/Code/src/components/SubmittableTextarea/index.scss
+++ b/Code/src/components/SubmittableTextarea/index.scss
@@ -12,6 +12,7 @@
 }
 
 .SubmittableTextarea__submit-button {
+  outline: none;
   font: inherit;
   background: linear-gradient(#90caf9, #1e88e5);
   border: none;
